small style fixed: better contrast, remove unnecessary truncation, only show permissions/size/peers when data exists

--- a/client/scss/imports/_dat-header.scss
+++ b/client/scss/imports/_dat-header.scss
@@ -45,9 +45,6 @@
 .share-link {
   display: flex;
   font-size: 1.375rem;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .dat-details {
